2009-12-28 Pratyusha Doddapaneni <pratyusha.d@in.ibm.com>
	* enumerateInstance_CIM_IndicationService.lines, SAE_03_AI-IF.lines:

	[2908425 ] IndicationProfile: Reliable Indications, removal 
	(Fixing test failures)

2009-12-24 Michael Chase-Salerno <bratac@linux.vnet.ibm.com>

	* indCIMXMLHandler.c, 10_interop.mof:
	[ 2908425 ] IndicationProfile: Reliable Indications, removal 

2009-12-23 Michael Chase-Salerno <bratac@linux.vnet.ibm.com>

	* interopProvider.c,indCIMXMLHandler.c,10_interop.mof:
	[ 2908425 ] IndicationProfile: Reliable Indications, removal 

2009-12-23  Chris Buccella  <buccella@linux.vnet.ibm.com>

	* providerMgr.c:
	[ 2920402 ] 'out' param in localInvokeMethod sometimes not used

	[ 2920407 ] addProviders() doesn't release UtilList
	
2009-12-23  Sean Swehla  <smswehla@linux.vnet.ibm.com>

	* interopServerProvider.c
	[ 2920387 ] IndicationProfile: CIM_IndicationService doesn't persist

2009-12-23  Pratyusha Doddapaneni <pratyusha.d@in.ibm.com>
	
	* test/xmltest/modifyInstance_ServerProv.*, 
	  enumerateInstance_CIM_IndicationService.lines
	[ 2919072 ] IndicationProfile: CIM_IndicationService ModifyInstance
	(Test case failures updated)

2009-12-22  Chris Buccella  <buccella@linux.vnet.ibm.com>

	* interopProvider.c:
	[ 2919753 ] Some IndicationSubscriptions cannot be deleted

2009-12-21  Sean Swehla  <smswehla@linux.vnet.ibm.com>

	* interopServerProvider.c, cmpidt.h
	[ 2919072 ] IndicationProfile: CIM_IndicationService ModifyInstance

2009-12-18  Chris Buccella  <buccella@linux.vnet.ibm.com>

	* Makefile.am, objectImpl.h, sfcbdump.c, sfcbrepos.sh.in, 
	  support.c, mofc/backend_sfcb.c, mofc/mofparse.c,
	  mofc/symtab.c, classProviderSf.c:
	[ 1664637 ] Reduced size class repository / classProviderSf

2009-12-16 Michael Chase-Salerno <bratac@linux.vnet.ibm.com>

	* indCIMXMLHandler.c:
	[ 2908423 ] Honor DeliveryRetry* props of CIM_IndicationService

2009-12-16  Chris Buccella  <buccella@linux.vnet.ibm.com>

	* result.c: