@@ -47,6 +47,7 @@ Bugs fixed:
 - 2920387 IndicationProfile: CIM_IndicationService doesn't persist
 - 2920402 'out' param in localInvokeMethod sometimes not used
 - 2920407 addProviders() doesn't release UtilList
+- 2923826 Leak on XML generation if including qualifiers
 
 Changes in 1.3.5
 ================
