@@ -1,7 +1,13 @@
+2009-12-30  Chris Buccella  <buccella@linux.vnet.ibm.com>
+
+	* cimXmlGen.c:
+	[ 2923826 ] Leak on XML generation if including qualifiers
+
 2009-12-28 Pratyusha Doddapaneni <pratyusha.d@in.ibm.com>
+
 	* enumerateInstance_CIM_IndicationService.lines, SAE_03_AI-IF.lines:
 
-	[2908425 ] IndicationProfile: Reliable Indications, removal 
+	[ 2908425 ] IndicationProfile: Reliable Indications, removal 
 	(Fixing test failures)
 
 2009-12-24 Michael Chase-Salerno <bratac@linux.vnet.ibm.com>
